Implement login, JWT authentication, password encryption, and user account creation. Added role-based access control (admin/user). Integrated JWT handling via Authorization header. Verified that only authenticated users can access secured routes.